add library package